# vk-ffi

./: .gitignore  .gitmodules  Cargo.toml  Makefile  NOTICE  README.md
.cargo/: config
src/examples/: Cargo.toml  README.md
src/examples/data/gamma/: gamma.glsl  gamma.spv
src/examples/src/: lib.rs
src/vk-ffi/: Cargo.toml  README.md  build.rs  stub.h
src/vk-ffi-gen/: Cargo.toml  README.md
src/vk-ffi-gen/src/: defs.rs  main.rs  rewrite.rs  scrape.rs
src/vk-ffi-gen/src/emit/: bindings.rs  loader.rs  mod.rs
src/vk-ffi-loader/: Cargo.toml  README.md
src/vk-ffi-loader/src/: lib.rs
src/vk-ffi-meta-bindings/: Cargo.toml  README.md  build.rs  stub.h
src/vk-ffi-meta-bindings/build_src/: emit.rs  mod.rs  rewrite.rs  scrape.rs
src/vk-ffi-meta-bindings/src/: lib.rs
src/vk-ffi-meta-defs/: Cargo.toml  README.md
src/vk-ffi-meta-defs/src/: imp.rs  lib.rs
src/vk-ffi/build_src/: enum_rename.rs  enum_rewrite.rs  global_rename.rs  handle_rewrite.rs  mod.rs
src/vk-ffi/src/: imp.rs  lib.rs  macros.rs  tests.rs
src/vulkan-headers/: Cargo.toml  README.md
src/vulkan-headers/src/: lib.rs  tests.rs
src/vulkan-loader/: Cargo.toml  README.md
src/vulkan-loader/src/: lib.rs
