[package]
name = "examples"
description = "Usage examples for vk-ffi"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
libloading = "0.5"
vk-ffi = { path = "../vk-ffi" }
vk-ffi-loader = { path = "../vk-ffi-loader" }
