[package]
name = "examples"
description = "Usage examples for vk-ffi"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
lib = { version = "0.5", package = "libloading" }
vk = { path = "../vulkan-headers", package = "vulkan-headers" }
vkl = { path = "../vulkan-loader", package = "vulkan-loader" }
