[package]
name = "vk-ffi-gen"
description = "Source code generator for Vulkan API bindings"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bindgen = "0.42"
clap = "2.32"
derive_more = "0.13"
heck = "0.3"
proc-macro2 = "0.4"
quote = "0.6"
which = "2.0"

[dependencies.syn]
version = "0.15"
default-features = false
features = ["extra-traits", "full", "parsing", "printing", "visit-mut"]
