[package]
name = "vk-ffi-meta-bindings"
description = "Meta bindings for Vulkan API binding generators"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"

[features]
syn-extra-traits = ["syn/extra-traits", "vk-ffi-meta-defs/syn-extra-traits"]

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"

[dependencies.syn]
version = "0.15"
default-features = false
features = ["full", "parsing", "printing", "visit-mut"]

[dependencies.vk-ffi-meta-defs]
path = "../vk-ffi-meta-defs"
features = ["syn-visit-mut"]

[build-dependencies]
bindgen = "0.42"
heck = "0.3"
proc-macro2 = "0.4"
quote = "0.6"

[build-dependencies.syn]
version = "0.15"
default-features = false
features = ["full", "parsing", "printing", "visit-mut"]

[build-dependencies.vk-ffi-meta-defs]
path = "../vk-ffi-meta-defs"
features = ["syn-visit-mut"]
