[package]
name = "vk-ffi-meta-defs"
description = "Meta definitions for Vulkan API binding generators"
version = "0.1.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"

[features]
syn-extra-traits = ["syn/extra-traits"]
syn-visit-mut = ["syn/visit-mut"]

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"

[dependencies.syn]
version = "0.15"
default-features = false
features = ["full", "parsing", "printing"]
