[package]
name = "vk-ffi"
description = "Complete, direct bindings to the Vulkan API"
version = "0.88.0"
authors = ["Matthew McAllister <matthew.mcallister.0@gmail.com>"]
edition = "2018"

[build-dependencies]
bindgen = "0.42"
heck = "0.3"
proc-macro2 = "0.4"
quote = "0.6"

[build-dependencies.syn]
version = "0.15"
default-features = false
features = ["full", "parsing", "printing", "visit-mut"]
